--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -1,7 +1,14 @@
 .main {
+    display: flex;
+    justify-content: center;
+    width: 100%;
     padding: 6.5rem 5rem;
     background-color: var(--primary-dark);
     color: #fff;
+}
+
+.inner {
+    width: 100%;
 }
 
 .brand {
