--- a/components/SignUp/SignUp.module.css
+++ b/components/SignUp/SignUp.module.css
@@ -1,5 +1,47 @@
 .main {
-    padding: 6.5rem 5rem;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 5.75rem 32px 6.5rem 32px;
+
     background-color: var(--primary);
     color: #fff;
+}
+
+.inner {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+.main h2 {
+    color: #fff;
+}
+
+.main input {
+    width: 100%;
+}
+
+.content {
+    width: 40%;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    row-gap: 1rem;
+    width: 40%;
+}
+
+.form button {
+    white-space: nowrap;
+    width: min-content;
+}
+
+@media screen and (min-width: 600px) {
+    .main {
+        padding-left: 5rem;
+        padding-right: 5rem;
+    }
 }
