--- a/components/Testimonials/Testimonials.module.css
+++ b/components/Testimonials/Testimonials.module.css
@@ -15,7 +15,7 @@
 }
 
 .content {
-    width: 50%;
+    width: 60%;
 }
 
 .illustration {
@@ -38,8 +38,14 @@
     }
 
     .content {
+        display: flex;
+        flex-direction: column;
+        align-items: left;
         height: min-content;
-        padding-right: 3.25rem;
+    }
+
+    .content .flavorText {
+        width: 80%;
     }
 
     .illustration {
