--- a/styles/globals.css
+++ b/styles/globals.css
@@ -40,13 +40,13 @@ h5,
 h6 {
     color: var(--primary-dark);
     font-family: var(--font-display);
-    letter-spacing: 0.5px;
 }
 
 h1 {
     font-size: 2.5rem;
     font-weight: 700;
-    margin: 0 0 2.3rem 0;
+    line-height: 3.75rem;
+    margin: 0;
 }
 
 h2 {
@@ -56,7 +56,8 @@ h2 {
 
 p {
     letter-spacing: 0.5px;
-    line-height: 22px;
+    line-height: 23px;
+    margin-bottom: 24px;
 }
 
 input,
@@ -76,8 +77,11 @@ input,
     border: 0;
 }
 
-input::placeholder,
-.input::placeholder {
+:focus {
+    outline: 0;
+}
+
+::placeholder {
     color: var(--neutral-gray);
 }
 
