--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    padding: 6.5rem 5rem;
+    padding: var(--page-padding);
     background-color: var(--primary-dark);
     color: #fff;
 }
