--- a/components/Testimonials/Testimonials.module.css
+++ b/components/Testimonials/Testimonials.module.css
@@ -2,9 +2,12 @@
     display: flex;
     justify-content: center;
     width: 100%;
-    padding: 5.75rem 32px 6.5rem 32px;
-    text-align: center;
+    padding: var(--page-padding);
     background-color: var(--neutral-gray-blue);
+}
+
+.main h1 {
+    text-align: center;
 }
 
 .inner {
@@ -15,7 +18,7 @@
 }
 
 .content {
-    width: 60%;
+    width: 100%;
 }
 
 .illustration {
@@ -24,6 +27,64 @@
 
 .illustration img {
     width: 100%;
+}
+
+.curve {
+    vertical-align: bottom;
+    width: 100%;
+    height: 70px;
+}
+
+.cardHolder {
+    padding: 0 2rem;
+}
+
+.card {
+    min-width: 260px;
+    max-width: 340px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0.75rem 1.75rem 1.75rem 1.75rem;
+    border-radius: 5px;
+    background-color: #fff;
+    color: var(--primary-dark);
+}
+
+.card p {
+    font-size: 10px;
+    line-height: 18px;
+}
+
+.quotes {
+    vertical-align: top;
+    height: 12px;
+    width: 12px;
+}
+
+.photo {
+    float: left;
+    width: 2.25rem;
+    border-radius: 50%;
+}
+
+.author {
+    display: flex;
+    height: 2.25rem;
+    line-height: 14px;
+}
+
+.authorName {
+    font-size: 12px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    margin-left: 10px;
+    color: var(--primary-dark);
+}
+
+.authorSubtitle {
+    font-size: 10px;
+    line-height: 12px;
+    margin-left: 10px;
 }
 
 @media screen and (min-width: 600px) {
@@ -38,6 +99,7 @@
     }
 
     .content {
+        width: 60%;
         display: flex;
         flex-direction: column;
         align-items: left;
@@ -59,51 +121,51 @@
         height: 100%;
         width: unset;
     }
-}
 
-.curve {
-    vertical-align: bottom;
-    width: 100%;
-    height: 70px;
-}
+    .card {
+        font-size: 14px;
+        line-height: 26px;
+        width: 350px;
+        margin: 0;
+        padding: 1rem 2rem 2rem 2rem;
+        border-radius: 5px;
+        background-color: #fff;
+    }
 
-.card {
-    font-size: 14px;
-    line-height: 26px;
-    width: 350px;
-    padding: 1rem 2rem 2rem 2rem;
-    border-radius: 5px;
-    background-color: #fff;
-}
+    .card p {
+        font-size: 14px;
+        line-height: 26px;
+    }
 
-.quotes {
-    vertical-align: top;
-    height: 15px;
-    width: 15px;
-}
+    .quotes {
+        vertical-align: top;
+        height: 15px;
+        width: 15px;
+    }
 
-.photo {
-    float: left;
-    width: 2.25rem;
-    border-radius: 50%;
-}
+    .photo {
+        float: left;
+        width: 2.25rem;
+        border-radius: 50%;
+    }
 
-.author {
-    display: flex;
-    height: 2.25rem;
-    line-height: 17px;
-}
+    .author {
+        display: flex;
+        height: 2.25rem;
+        line-height: 17px;
+    }
 
-.authorName {
-    font-size: 13px;
-    font-weight: 700;
-    letter-spacing: 1px;
-    margin-left: 10px;
-    color: var(--primary-dark);
-}
+    .authorName {
+        font-size: 13px;
+        font-weight: 700;
+        letter-spacing: 1px;
+        margin-left: 10px;
+        color: var(--primary-dark);
+    }
 
-.authorSubtitle {
-    font-size: 11px;
-    line-height: 12px;
-    margin-left: 10px;
+    .authorSubtitle {
+        font-size: 11px;
+        line-height: 12px;
+        margin-left: 10px;
+    }
 }
